# cfss-project

./: docker-compose.yml  dump_db.py  dump_raw.py  requirements.txt  test.csv  test_endpoint.py  test_full_flow.py
backend/: create_prefs_sql.py  create_prefs_table.py  drop_tables.py  fix_db.py  fix_schema.py  migrate_auth.py  migrate_settings.py  migrate_users.py  pyproject.toml  run_sync_migration.py  safe_migrate.py  seed_surveys.py  start.sh  test_auth.py  test_auth_api.py  test_client_flow.py  test_create_comm.py  test_create_db.py  test_dashboard.py  test_db.py  test_e2e_flow.py  test_export.py  test_fastapi.py  test_http_stats.py  test_httpx_flow.py  test_query.py  test_query2.py  test_router.py  test_router_local.py  test_settings.py  test_settings_auth.py  test_student.py  test_tables.py  test_tables2.py  test_tables3.py  test_tables4.py  test_tables5.py  test_tables6.py
backend/alembic/: env.py
backend/alembic/versions/: b16dbcdc0a7c_addsurveytables.py  c6c66c014fef_option_a.py
backend/app/: auth.py  circuit_breaker.py  database.py  logger.py  main.py  middleware.py  models.py  rate_limiter.py  reconciliation.py  schemas.py  whitelist_schemas.py  worker.py
backend/app/routers/: admin_export.py  admin_router.py  admin_whitelist.py  auth_router.py  auth_router_v2.py  student_auth_router.py  student_router.py  student_settings.py  student_surveys.py  sync_router.py  whitelist_auth_router.py
backend/tests/: test_api.py
frontend/: package-lock.json  package.json  test_axios.js
frontend/src/app/: layout.tsx
frontend/src/components/: ThemeProvider.tsx
(+32 files in other folders)
